--- a/AppWebPruebaFinal/Views/Home/Index.cshtml
+++ b/AppWebPruebaFinal/Views/Home/Index.cshtml
@@ -3,5 +3,25 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="https://img10.naventcdn.com/home/RPHOMv2.5.5-RC1/images/dfp-venta.jpg" alt="Primer imagen">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://armonichomes.com/wp-content/uploads/2018/07/familia-casa.jpg" alt="Segunda imagen">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://isil.pe/wp-content/uploads/2017/08/negocios-internacionales-1.jpg" alt="Tercera imagen">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
