--- a/AppWebPruebaFinal/Views/Propietario/Index.cshtml
+++ b/AppWebPruebaFinal/Views/Propietario/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h3>Nuestros Propietarios</h3>
 
 <p>
     <a asp-action="Create">Crear Nuevo</a>
