--- a/AppWebPruebaFinal/Views/Home/Index.cshtml
+++ b/AppWebPruebaFinal/Views/Home/Index.cshtml
@@ -3,25 +3,37 @@
     ViewData["Title"] = "Index";
 }
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="https://img10.naventcdn.com/home/RPHOMv2.5.5-RC1/images/dfp-venta.jpg" alt="Primer imagen">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://armonichomes.com/wp-content/uploads/2018/07/familia-casa.jpg" alt="Segunda imagen">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://isil.pe/wp-content/uploads/2017/08/negocios-internacionales-1.jpg" alt="Tercera imagen">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2700">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="https://img10.naventcdn.com/home/RPHOMv2.5.5-RC1/images/dfp-venta.jpg" alt="First slide" style="height:550px">
+            <div class="carousel-caption d-none d-md-block">
+                <h5 style="color:black;background-color:white">Disfruta de la mejor calidad en departamentos y casas</h5>
+                <p style="color:black;"><b>Inmobiliaria ULP</b></p>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="http://armonichomes.com/wp-content/uploads/2018/07/familia-casa.jpg" alt="Second slide" style="height:550px">
+            <div class="carousel-caption d-none d-md-block">
+                <h5 style="color:black;background-color:white">Para vos y tu familia</h5>
+                <p style="color:black;"><b>Inmobiliaria ULP</b></p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://isil.pe/wp-content/uploads/2017/08/negocios-internacionales-1.jpg" alt="Third slide" style="height:550px">
+            <div class="carousel-caption d-none d-md-block">
+                <h5 style="color:black;background-color:white">Precios de mercado y 100% seguro</h5>
+                <p  style="color:black;"><b>Inmobiliaria ULP</b></p>
+            </div>
+        </div>
     </div>
+</div>
+<a class="carousel-control-prev alert-light" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next alert-light" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+</a>
 
