--- a/AppWebPruebaFinal/Views/Shared/_Layout.cshtml
+++ b/AppWebPruebaFinal/Views/Shared/_Layout.cshtml
@@ -13,26 +13,11 @@
         <nav class="site-header sticky-top py-sm-1 bg-primary">
             <div class="container d-flex flex-column flex-md-row justify-content-between">
                 <a class="py-2 font-weight-light" asp-controller="Home" asp-action="Index"><span class="lnr lnr-home"></span> Inicio</a>
-                <a class="py-2 d-none d-md-inline-block font-weight-light" asp-controller="Propietario" asp-action="Index"><span class="lnr lnr-users"></span> Propietarios</a>
+                <a class="py-2 d-none d-md-inline-block font-weight-light" asp-controller="Propietario" asp-action="Index"><span class="lnr lnr-user"></span> Propietarios</a>
                 <a class="py-2 d-none d-md-inline-block font-weight-light" asp-controller="Inmuebles" asp-action="Index"><span class="lnr lnr-apartment"></span> Inmuebles</a>
-                <a class="py-2 d-none d-md-inline-block font-weight-light" asp-controller="Alquileres" asp-action="Index"><span class="lnr lnr-license"></span> Contratos</a>
-                @if (User.Identity.IsAuthenticated)
-                {
-                <div class="dropdown">
-                    <a class="btn btn-primary dropdown-toggle text-light" href="#" role="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent" data-display="static">
-                        <span class="lnr lnr-user"></span> @User.Identity.Name
-                    </a>
-
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item text-dark" asp-controller="Propietario" asp-action="Edit"><i class="lnr lnr-user"></i> Perfil</a>
-                        <a class="dropdown-item text-dark" asp-controller="Home" asp-action="Logout"><i class="lnr lnr-exit"></i> Salir</a>
-                    </div>
-                </div>
-                }
-                else
-                {
-                <a class="py-2 d-none d-md-inline-block float-right" href="@Url.Link(" login",null)"><span class="lnr lnr-enter"></span> Acceder</a>
-                }
+                <a class="py-2 d-none d-md-inline-block font-weight-light" asp-controller="Inquilino" asp-action="Index"><span class="lnr lnr-users"></span> Inquilinos</a>
+                <a class="py-2 d-none d-md-inline-block font-weight-light" asp-controller="Alquiler" asp-action="Index"><span class="lnr lnr-license"></span> Alquileres</a>
+                
             </div>
         </nav>
     </header>
@@ -85,11 +70,6 @@
             </div>
         </div>
     </main>
-    <footer class="footer fixed-bottom">
-        <div class="container">
-            <span class="text-muted">&copy; @DateTime.Today.Year Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a> <a class="float-right" href="#">Volver arriba</a></span>
-        </div>
-    </footer>
     @RenderSection("Scripts", false)
     @await Html.PartialAsync("_ScriptsPartial")
     <script type="text/javascript">
