--- a/AppWebPruebaFinal/Views/Inmuebles/Index.cshtml
+++ b/AppWebPruebaFinal/Views/Inmuebles/Index.cshtml
@@ -7,7 +7,7 @@
 <h3>Inmuebles disponibles</h3>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -61,9 +61,8 @@
                 @Html.DisplayFor(modelItem => item.PropietarioId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Editar", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Borrar", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
